--- a/sections/assos.tex
+++ b/sections/assos.tex
@@ -1,42 +1,51 @@
-\vspace{5mm}
-{\fontsize{12}{10}\selectfont \color{black} \textbf{Expériences associatives}}
-\newline
+{\fontsize{13}{10}\selectfont \color{black} \textbf{Volunteering}}
 
-%BDA
-\begin{tabular}{p{2.5cm} >{\raggedright\arraybackslash}p{10cm}}
-    De 2021 à 2022& {\color{black} \vspace{-3mm} \textbf{Vice-président}} \hspace{5mm} {\color{myOrange} \textbf{BDA}} \\
-        & {\tiny \ding{110}} \textit{Gestion d'une équipe de 15 personnes : concerts, évènements, voyages culturel et gestions des clubs}
+% %Ker'bab previous
+% \begin{tabular}{p{\dateCol} >{\raggedright\arraybackslash}p{\infoCol}}
+%     2021 - 2022 & {\color{black} \vspace{-3mm} \textbf{President}} \hspace{5mm} \MYhref[myOrange]{https://www.facebook.com/al.ker.bab/}{\textbf{Club Kebab}} \\
+%         & {\tiny \ding{110}} \textit{Weekly sale of a hundred homemade kebabs on campus} \\
+%         & {\tiny \ding{110}} \textit{Organizing the logistics and communication of each event} \\
+%         & {\tiny \ding{110}} \textit{Creating new partners relationship with local actors}
+% \end{tabular}
+
+% Ker'bab
+{\color{black} \textbf{President}} \hspace{5mm} \MYhref[myOrange]{https://www.facebook.com/al.ker.bab/}{\textbf{Club Kebab}} \hfill {\color{black}\textbf{2021 - 2022}}\\ \vspace{1mm}
+\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
+    & {\tiny \ding{110}} \textit{Weekly sale of a hundred homemade kebabs on campus with a team of 8 other students.} \\
+    & {\tiny \ding{110}} \textit{\textbf{Organizing the logistics and communication} of each event with a focus on hygien and security.} \\
+    & {\tiny \ding{110}} \textit{Creating new partners relationship with local actors to have fresh products.}
 \end{tabular}
 
-%Ker'bab
-\begin{tabular}{p{2.5cm} >{\raggedright\arraybackslash}p{10cm}}
-    De 2021 à 2022 & {\color{black} \vspace{-3mm} \textbf{Président}} \hspace{5mm} {\color{myOrange} \textbf{Club Kebab}} \\
-        & {\tiny \ding{110}} \textit{Vente hebdomadaire de kebabs maisons} \\
-        & {\tiny \ding{110}} \textit{Chargé logsitique, communication et lien avec un boulanger}
+%BDA
+{\color{black} \textbf{Vice-President}} \hspace{5mm} \MYhref[myOrange]{https://www.facebook.com/BdaIMTAtlantiqueBrest}{\textbf{Arts Committee}} \hfill {\color{black}\textbf{2021 - 2022}}\\ \vspace{1mm}
+\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
+    & {\tiny \ding{110}} \textit{The Art Commitee is the organization which manages events and clubs on the campus. The Bureau is elected by students according to the capacity of a team to conduct art oriented events.} \\
+    & {\tiny \ding{110}} \textit{I \textbf{managed a team of 18 students} with respective broad roles. I managed this team through my term and filled paper to ensure the legal framework and security of all the events.} \\
+    & {\tiny \ding{110}} \textit{The events : concerts by students and local musicians, western France cultural events, a week of artistic events with local performers, a cultural trip in Amsterdam for 90 students.}
 \end{tabular}
 
 %S&L
-\begin{tabular}{p{2.5cm} >{\raggedright\arraybackslash}p{10cm}}
-    De 2021 à 2022 & {\color{black} \vspace{-3mm} \textbf{Responsable Son \& Lumière}} \hspace{5mm} {\color{myOrange} \textbf{S\&L}} \\
-        & {\tiny \ding{110}} \textit{Responsable technique et sécurisation des évènements}
-\end{tabular}
+% \begin{tabular}{p{\dateCol} >{\raggedright\arraybackslash}p{\infoCol}}
+%     2021 - 2022 & {\color{black} \vspace{-3mm} \textbf{Sound \& Light Manager}} \hspace{5mm} \MYhref[myOrange]{https://www.facebook.com/people/SL-IMT-Atlantique-Brest/100077578935962/}{\textbf{S\&L}} \\
+%         & {\tiny \ding{110}} \textit{Technical and security manager for setting up events}
+% \end{tabular}
 
 %BDD
-\begin{tabular}{p{2.5cm} >{\raggedright\arraybackslash}p{10cm}}
-    De 2021 à 2022 & {\color{black} \vspace{-3mm} \textbf{Responsable de projets}} \hspace{5mm} {\color{myOrange} \textbf{BDD} }\\
-        & {\tiny \ding{110}} \textit{Projet vélos : location, entretien et transmission} \\
-        & {\tiny \ding{110}} \textit{Projet verger : entretien de plans de pommiers sur le campus} \\
-\end{tabular}
+%\begin{tabular}{p{\dateCol} >{\raggedright\arraybackslash}p{\infoCol}}
+%    De 2021 à 2022 & {\color{black} \vspace{-3mm} \textbf{Responsable de projets}} \hspace{5mm} \MYhref[myOrange]{https://bdd-imta.hubside.fr/}{\textbf{BDD}} \\
+%        & {\tiny \ding{110}} \textit{Projet vélos : location, entretien et transmission} \\
+%        & {\tiny \ding{110}} \textit{Projet verger : entretien de plans de pommiers sur le campus} \\
+%\end{tabular}
 
 %Renovo
-\begin{tabular}{p{2.5cm} >{\raggedright\arraybackslash}p{10cm}}
-    De 2016 à 2022 & {\color{black} \vspace{-3mm} \textbf{Cours de mathématiques et physique}} \hspace{5mm} {\color{myOrange} \textbf{Renovo}} \\
-        & {\tiny \ding{110}} \textit{Cours à des classes pendant les vacances} \\
-        & {\tiny \ding{110}} \textit{Sorties culturelles et inspirantes}
-\end{tabular}
+% \begin{tabular}{p{\dateCol} >{\raggedright\arraybackslash}p{\infoCol}}
+%     De 2016 à 2022 & {\color{black} \vspace{-3mm} \textbf{Cours de mathématiques et physique}} \hspace{5mm} \MYhref[myOrange]{https://www.renovo.fr/}{\textbf{Renovo}} \\
+%         & {\tiny \ding{110}} \textit{Cours à des classes pendant les vacances} \\
+%         & {\tiny \ding{110}} \textit{Sorties culturelles et inspirantes}
+% \end{tabular}
 
-%nsemble pour l'Avenir
-\begin{tabular}{p{2.5cm} >{\raggedright\arraybackslash}p{10cm}}
-    De 2012 à 2016 & {\color{black} \vspace{-3mm} \textbf{Aides alimentaire}} \hspace{5mm} {\color{myOrange} \textbf{Ensemble pour l'Avenir}} \\
-        & {\tiny \ding{110}} \textit{Préparation et services de repas : 150 repas par soir}
-\end{tabular}
+%Ensemble pour l'Avenir
+% \begin{tabular}{p{\dateCol} >{\raggedright\arraybackslash}p{\infoCol}}
+%     2012 - 2016 & {\color{black} \vspace{-3mm} \textbf{Food Assistance}} \hspace{5mm} \MYhref[myOrange]{http://ensemblepourlavenir1.free.fr/}{\textbf{Ensemble pour l'Avenir}} \\
+%         & {\tiny \ding{110}} \textit{Preparation and meal services: 150 covers per evening}
+% \end{tabular}
