--- a/sections/centres d'interet.tex
+++ b/sections/centres d'interet.tex
@@ -1,13 +1,20 @@
-\vspace{5mm}
+\vspace{4mm}
 \hspace*{-2mm}
-{\fontsize{16}{10}\selectfont \faIcon[solid]{users} \hspace{1.5mm} Centre d'intérêt}
+{\fontsize{16}{10}\selectfont \hspace{1.5mm} Interests}
 \newline \newline
 
-\vspace{-5mm}
+\vspace{-8mm}
 \hspace{-2mm}
-{\fontsize{12}{10}\selectfont \hspace{3.8mm} Loisirs et sports}\newline
-\vspace{-5mm}
+{\fontsize{12}{10}\selectfont \hspace{3.8mm} Sports}\newline
+\vspace{-6mm}
 \begin{itemize}
-    \item[\tiny\ding{110}] \textit{Sports : club de basket-ball, ceinture noire de karaté}
-    \item[\tiny\ding{110}] \textit{Loisirs : jeux vidéos, cinéma, théâtre au conservatoire de Paris \rom{14}$^{e}$, bassiste en groupe}
+    \item[\tiny\ding{110}] \textit{karate black belt (8y), basket-ball in club (6y), biking (8y), thaï boxe (2y)}
 \end{itemize}
+
+\hspace{-2mm}
+\vspace{-6mm}
+{\fontsize{12}{10}\selectfont \hspace{3.8mm} Leisures}\newline
+\begin{itemize}
+    \item[\tiny\ding{110}] \textit{videogames' design analysis (12y), bassist in a groupe (5y), theater at the Paris' Conservatory (4y), cinema talkshows (8y)}
+\end{itemize}
+\vspace{2mm}
