--- a/sections/exp_pro.tex
+++ b/sections/exp_pro.tex
@@ -1,29 +1,55 @@
-\vspace{5mm}
-{\fontsize{12}{10}\selectfont \color{black} \textbf{Expériences professionnelles}}
-\newline
+{\fontsize{13}{10}\selectfont \color{black} \textbf{Experience}}
 
-%ResEl
-\begin{tabular}{p{2.5cm} >{\raggedright\arraybackslash}p{10cm}}
-    De 2021 à 2022 & {\color{black} \vspace{-3mm} \textbf{Administrateur Réseau, Secrétaire, Responsable formations}} \hspace{5mm} {\color{myOrange} \textbf{ResEl}} \\
-        & {\tiny \ding{110}} \textit{Administration, entretien et sécurisation du parc et du réseau internet des étudiants du campus} \\
-        & {\tiny \ding{110}} \textit{Gestion du cadre légal de l'association et organisation des formations à l'adresse des étudiants} \\
-        & {\tiny \ding{110}} \textit{Développement d'un outil de monitoring d'onduleurs}
+%SIMULANDS previous
+% \begin{tabular}{p{\dateCol} >{\raggedright\arraybackslash}p{\infoCol}}
+%     October 2023 - March 2024 & {\color{black} \vspace{-3mm} \textbf{Software Engineer Intern}} \hspace{5mm} \MYhref[myOrange]{https://www.simulands.com/}{\textbf{SIMULANDS}} \\
+%         & \vspace{-6.5mm} {\tiny \ding{110}}
+%         \textit{A medtech startup that develops Human Grade simulators that replicate real procedural experiences with accurate device performance insights} \\
+%         & {\tiny \ding{110}} \textit{Developing a Mixed Reality Software : developing a model to track hands and surgical tools and a stereovision algorithm to estimate their position / designing hardware and software architecture and parallelizing the code to improve real time computation / optimizing the software setup / building a } \\
+%         & {\tiny \ding{110}} \textit{Database administration :} \\
+%         & {\tiny \ding{110}} \textit{Skills: lorem ipsum}
+% \end{tabular}
+
+%  SIMULANDS
+{\color{black} \textbf{Software Engineer Intern}} \hspace{5mm} \MYhref[myOrange]{https://www.simulands.com/}{\textbf{SIMULANDS}} \hfill {\color{black}\textbf{October 2023 - March 2024}}\\ \vspace{1mm}
+\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
+    & {\tiny \ding{110}} \textit{A medtech startup that develops Human Grade simulators that replicate real procedural experiences with accurate device performance insights.} \\
+    & {\tiny \ding{110}} \textit{Mixed Reality Software developement : training a \textbf{Deep Learning segmentation model to track hands and surgical tools} and developing a stereovision algorithm to estimate their position / \textbf{optimizing the model and parallelizing the algorithm} to ensure \textbf{real time computation} / \textbf{designing hardware and software architecture} to improve computation / optimizing the software setup for stabilization / building AR Unity scenes / gamifying procedures to ease the learning curve.} \\
+    & {\tiny \ding{110}} \textit{Database administration : migrating our subcontractor's database / creating a pipeline to perform redundant statistic analysis instead of the marketing team / training analysis to give insights on the trainings.} \\
 \end{tabular}
 
-%PostExo
-\begin{tabular}{p{2.5cm} >{\raggedright\arraybackslash}p{10cm}}
-    Février 2022 & {\color{black} \vspace{-3mm} \textbf{Bras droit du CEO}} \hspace{5mm} {\color{myOrange} \textbf{PostExo}} \\
-        & {\tiny \ding{110}} \textit{Automatisation des process et refonte du site} \\
-        & {\tiny \ding{110}} \textit{Établissement de stratégies de communication}
+% CEA
+{\color{black} \textbf{Research Assistant Intern}} \hspace{5mm} \MYhref[myOrange]{https://list.cea.fr/fr/}{\textbf{CEA List}} \hfill {\color{black} \textbf{April 2023 - August 2023}}\\ \vspace{1mm}
+\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
+    & {\tiny \ding{110}} \textit{A research institute that focuses on digital systems to drive business competitiveness. Its Text and Image Analysis Laboratory studies Deep Learning models, their improvement and their use.} \\
+    & {\tiny \ding{110}} \textit{Project : Researching a \textbf{state-of-the-art Transformer based NLP model} / \href{https://github.com/n2oblife/OpenNMT-py_deeplima}{developing its training pipeline in Python and implementating its conversion in C++} / training the model with CEA's cluster / \href{https://github.com/n2oblife/CTranslate2_deeplima}{developing the \textbf{inference using an optimized C++ engine}} to achieve a high frequency of tokens computed / integrating my work into \href{https://github.com/aymara/lima}{their multilingual NLP model} / focusing on the \textbf{documentation and sustainability of the work}.} \\
 \end{tabular}
 
-%UberEats
-%\begin{tabular}{p{2.5cm} >{\raggedright\arraybackslash}p{10cm}}
-%    De mars 2018 à août 2018 & {\color{black} \vspace{-3mm} \textbf{Livreur à vélo}} \hspace{5mm} {\color{myOrange} \textbf{UberEats}}
+% ResEl
+{\color{black} \textbf{Network Administrator, Secretary, Training Manager}} \hspace{5mm} \MYhref[myOrange]{https://resel.fr/}{\textbf{ResEl}} \hfill {\color{black}\textbf{2021 - 2023}}\\ \vspace{1mm}
+\begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
+    & {\tiny \ding{110}} \textit{A technical association providing a network of +3K machines across two campuses on different cities, and enabling members to acquire essential technological skills. } \\
+    & {\tiny \ding{110}} \textit{Learning the ins and outs of project management in the field of network engineering as a \textbf{manager of a team of student administrators}. I also \textbf{ensured the legal framework of the association} and its events especially when planned with professional partners as board member.} \\
+    & {\tiny \ding{110}} \textit{Organizing events such as the Google Hash code and the FedeRez Days and seting training programs for students to learn from the basis of IT to advanced network skills.} \\
+    & {\tiny \ding{110}} \textit{Project : \textbf{Development of an inverter monitoring tool}} \\
+\end{tabular}
+
+% %PostExo previous
+% \begin{tabular}{p{\dateCol} >{\raggedright\arraybackslash}p{\infoCol}}
+%     February 2022 & {\color{black} \vspace{-3mm} \textbf{Right-hand of the CEO}} \hspace{5mm} \MYhref[myOrange]{https://postexo.com/}{\textbf{PostExo}} \\
+%         & {\tiny \ding{110}} \textit{An educational application that allowes student to upload questions that are addressed by teachers. The app's whiteboard feature transforms remote education dynamic. It charges only at the end of the session, embodying a commitment to democratize knowledge.} \\
+%         & {\tiny \ding{110}} \textit{Process automation and website redesign} \\
+%         & {\tiny \ding{110}} \textit{Establishment of communication strategies} \\
+%         & {\tiny \ding{110}} \textit{Skills: lorem ipsum}
+% \end{tabular}
+
+%UberEats previous
+%\begin{tabular}{p{\dateCol} >{\raggedright\arraybackslash}p{\infoCol}}
+%    De mars 2018 à août 2018 & {\color{black} \vspace{-3mm} \textbf{Livreur à vélo}} \hspace{5mm} \MYhref[myOrange]{https://www.ubereats.com/fr}{\textbf{UberEats}}
 %\end{tabular}
 
-%Institut Curie
-\begin{tabular}{p{2.5cm} >{\raggedright\arraybackslash}p{10cm}}
-    De janvier 2015 à juin 2015 & {\color{black} \vspace{-3mm} \textbf{Assistant de recherche}} \hspace{5mm} {\color{myOrange} \textbf{Institut Curie}} \\
-        & \vspace{-6.5mm} {\tiny \ding{110}} \textit{Shadowing des chercheurs, manipulations simples et présentation}
-\end{tabular}
+%Institut Curie previous
+% \begin{tabular}{p{\dateCol} >{\raggedright\arraybackslash}p{\infoCol}}
+%     January 2015 - June 2015 & {\color{black} \vspace{-3mm} \textbf{Research Assistant Intern}} \hspace{5mm} \MYhref[myOrange]{https://curie.fr/}{\textbf{Institut Curie}} \\
+%         & \vspace{-6.5mm} {\tiny \ding{110}} \textit{Shadowing researchers, performing basic manipulations, and delivering presentations}
+% \end{tabular}
