--- a/sections/header.tex
+++ b/sections/header.tex
@@ -1,11 +1,13 @@
-\color{myBlack}
 \vspace{0.5cm}
+% \begin{center}
+%     {\fontsize{36pt}{36pt}\selectfont Zaccarie Kanit}
+% \end{center}
+\newcommand{\jobTitle}{an Data Scientist }
 \begin{center}
-    {\fontsize{36pt}{36pt}\selectfont Kanit Zaccarie}
+    {\Large {\color{black}\textbf{M1 Engineering Student looking for an internship/job as \jobTitle starting from April 2024}}}
 \end{center}
-\begin{center}
-    {\LARGE Recherche d'un stage à partir d'avril 2023}
-\end{center}
-\begin{center}
-    {\LARGE dans le milieu de l'ingénierie}
-\end{center}
+% \begin{center}
+%     {\Large {\color{black}\textbf{M1 Engineering Student applying for the Computational and Science Eningeering Master Degree at TUM}}}
+% \end{center}
+
+% mettre en gras les mots clés
