--- a/sections/informatiques.tex
+++ b/sections/informatiques.tex
@@ -1,29 +1,37 @@
-\vspace{5mm}
+\vspace{4mm}
 \hspace*{-2mm}
-{\fontsize{16}{10}\selectfont \faIcon[solid]{laptop} \hspace{1.5mm} Informatique} \newline \newline
+{\fontsize{16}{10}\selectfont \hspace{1.5mm} Skills} \newline \newline
 
-\vspace{-5mm}
+\vspace{-8mm}
 \hspace{-2mm}
-\vspace{-5mm}
 %Programmation
-{\fontsize{12}{10}\selectfont \hspace{3.7mm} Programmation }\newline
+{\fontsize{12}{10}\selectfont \hspace{3.7mm} Programming }\newline
+\vspace{-6mm}
 \begin{itemize}[noitemsep]
     \item[\tiny\ding{110}] \textit{Python, SQL, R, Matlab}
-    \item[\tiny\ding{110}] \textit{Pytorch, Tensorflow}
-    \item[\tiny\ding{110}] \textit{Java}
-    \item[\tiny\ding{110}] \textit{C/C++ et MPI}
-    \item[\tiny\ding{110}] \textit{Linux,bash, SNMP}
-    \item[\tiny\ding{110}] \textit{VHDL, FPGA, RaspberryPi}
-    \item[\tiny\ding{110}] \textit{DevOps : git, CI, .deb, Docker}
+    \item[\tiny\ding{110}] \textit{Java, C/C++}
+    \item[\tiny\ding{110}] \textit{Linux, bash, PowerShell}
+    \item[\tiny\ding{110}] \textit{PyTorch, LibTorch, AdapterHub}
+    %\item[\tiny\ding{110}] \textit{Trankit, OpenNMT, SpaCy, CTranslate2, Stanza}
+    %\item[\tiny\ding{110}] \textit{OpenCV, sklearn}
+    \item[\tiny\ding{110}] \textit{OpenMP, xsmid, Cuda}
+    \item[\tiny\ding{110}] \textit{VHDL, FPGA, RaspberryPi, ZedBoard}
+    \item[\tiny\ding{110}] \textit{Unity, C\#, Hololens}
+    \item[\tiny\ding{110}] \textit{Network, Sysadmin, Cisco}
+    %\item[\tiny\ding{110}] \textit{HTML, CSS, Javascript, Bootstrap, Wordpress}
+    \item[\tiny\ding{110}] \textit{gitlab, CI/CD, .deb, Docker}
+    %\item[\tiny\ding{110}] \textit{JetBrains Rider / Pycharm}
+    \item[\tiny\ding{110}] \textit{Graphic and CLI debugging}
+    \item[\tiny\ding{110}] \textit{Azure}
 \end{itemize}
 
 \vspace{2mm}
 \hspace{-2mm}
 %Bureautique
-{\fontsize{12}{10}\selectfont \hspace{3.8mm} Bureautique }\newline
-\vspace{-5mm}
+{\fontsize{12}{10}\selectfont \hspace{3.8mm} Office skills }\newline
+\vspace{-6mm}
 \begin{itemize}[noitemsep]
-    \item[\tiny\ding{110}] \textit{Pack Office, Outils Google avec AppScript}
+    \item[\tiny\ding{110}] \textit{Office Pack, Google Tools and AppScript}
     \item[\tiny\ding{110}] \LaTeX
     \item[\tiny\ding{110}] \textit{Zapier, AirTable}
 \end{itemize}
@@ -31,10 +39,11 @@
 \vspace{2mm}
 \hspace{-2mm}
 %Audiovisuel
-{\fontsize{12}{10}\selectfont \hspace{3.8mm} Montage audiovisuel}\newline
-\vspace{-5mm}
+{\fontsize{12}{10}\selectfont \hspace{3.8mm} Audiovisual editing}\newline
+\vspace{-6mm}
 \begin{itemize}[noitemsep]
-    \item[\tiny\ding{110}] \textit{Adobe Premier / Photoshop / Audition}
+    \item[\tiny\ding{110}] \textit{Adobe Premier / Photoshop / Audition, Gimp}
     \item[\tiny\ding{110}] \textit{FLStudio}
     \item[\tiny\ding{110}] \textit{OBS}
 \end{itemize}
+\vspace{2mm}
