--- a/sections/infos_perso.tex
+++ b/sections/infos_perso.tex
@@ -1,13 +1,15 @@
-%enelever commentaire si pas de photo
-\vspace{1cm}
-
 \hspace*{-2mm}
-{\fontsize{16}{10}\selectfont \faIcon[solid]{address-card} \hspace{1.5mm} Infos personnelles} \newline
+%{\fontsize{16}{10}\selectfont \faIcon[solid]{address-card} \hspace{1.5mm} Identité} \newline
 \vspace{-5mm}
+\begin{center}
+    {\fontsize{24pt}{24pt}\selectfont Zaccarie Kanit}
+\end{center}
+\vspace{2mm}
 \begin{itemize}[noitemsep]
-    \item[\faHome] {my adress}
-     \item[\faPhone] my phone
-    \item[\faAt] my mail
-    \item[\faLinkedin] my linkedin
+    % \item[\faHome] {Paris}
+    \item[\faPhone] \href{tel:+33651479304}{(+33) 6 51 47 93 04}
+    \item[\faAt] \href{mailto:zaccarie.kanit@imt-atlantique.net}{zaccarie.kanit@imt-atlantique.net}
+    \item[\faLinkedin] \href{https://www.linkedin.com/in/zaccarie-kanit/}{zaccarie-kanit}
     \item[\faGithub] \href{https://github.com/n2oblife}{n2oblife}
 \end{itemize}
+\vspace{2mm}
