--- a/sections/langues.tex
+++ b/sections/langues.tex
@@ -1,9 +1,11 @@
-\vspace{5mm}
+\vspace{4mm}
 \hspace*{-2mm}
-{\fontsize{16}{10}\selectfont \faIcon[solid]{comments} \hspace{1.5mm} Langues} \newline
+{\fontsize{16}{10}\selectfont \hspace{1.5mm} Languages} \newline
 \vspace{-5mm}
 \begin{itemize}[noitemsep]
-    \item[] Anglais - \textit{C2}
-    \item[] Allemand - \textit{B2}
-    \item[] Arabe - \textit{Débutant}
+    \item[] French - \textit{Native speaker}
+    \item[] English - \textit{Fluent - C1}
+    \item[] German - \textit{Professional - B2}
+    \item[] Arabic - \textit{Professional - B1}
 \end{itemize}
+\vspace{2mm}
