--- a/sections/photo.tex
+++ b/sections/photo.tex
@@ -1,4 +1,4 @@
 \begin{tikzpicture} [remember picture, overlay, shift={(current page.north west)}]
-	\node[anchor=north west, xshift=-1.24mm, yshift=1.52mm]      {\includegraphics[width= 1.09 \columnwidth]{images/Photo pro.png}};
+	\node[anchor=north west, xshift=-1.24mm, yshift=1.52mm]      {\includegraphics[width= 1.09 \columnwidth]{images/Photo pro.jpg}};
 \end{tikzpicture}
 \vspace*{4.5cm}
