--- a/sections/exp_pro.tex
+++ b/sections/exp_pro.tex
@@ -13,7 +13,7 @@
 %  SIMULANDS
 {\color{black} \textbf{Software Engineer Intern}} \hspace{5mm} \MYhref[myOrange]{https://www.simulands.com/}{\textbf{SIMULANDS}} \hfill {\color{black}\textbf{October 2023 - March 2024}}\\ \vspace{1mm}
 \begin{tabular}{p{\descrSpacing} >{\raggedright\arraybackslash}p{\descrWidth}}
-    & {\tiny \ding{110}} \textit{A medtech startup that develops Human Grade simulators that replicate real procedural experiences with accurate device performance insights.} \\
+    & {\tiny \ding{110}} \textit{A Swiss medtech startup that develops Human Grade simulators that replicate real procedural experiences with accurate device performance insights.} \\
     & {\tiny \ding{110}} \textit{Mixed Reality Software developement : training a \textbf{Deep Learning segmentation model to track hands and surgical tools} and developing a stereovision algorithm to estimate their position / \textbf{optimizing the model and parallelizing the algorithm} to ensure \textbf{real time computation} / \textbf{designing hardware and software architecture} to improve computation / optimizing the software setup for stabilization / building AR Unity scenes / gamifying procedures to ease the learning curve.} \\
     & {\tiny \ding{110}} \textit{Database administration : migrating our subcontractor's database / creating a pipeline to perform redundant statistic analysis instead of the marketing team / training analysis to give insights on the trainings.} \\
 \end{tabular}
