--- a/sections/header.tex
+++ b/sections/header.tex
@@ -2,12 +2,11 @@
 % \begin{center}
 %     {\fontsize{36pt}{36pt}\selectfont Zaccarie Kanit}
 % \end{center}
-\newcommand{\jobTitle}{an Data Scientist }
+%\newcommand{\jobTitle}{an Engineer }
 \begin{center}
-    {\Large {\color{black}\textbf{M1 Engineering Student looking for an internship/job as \jobTitle starting from April 2024}}}
+    {\Large {\color{black}\textbf{M2 Engineering Student looking for an internship}}}
 \end{center}
-% \begin{center}
-%     {\Large {\color{black}\textbf{M1 Engineering Student applying for the Computational and Science Eningeering Master Degree at TUM}}}
-% \end{center}
-
-% mettre en gras les mots clés
+\vspace{-2mm}
+\begin{center}
+    {\Large {\color{black}\textbf{as \jobTitle starting from April 2024}}}
+\end{center}
