--- a/sections/centres d'interet.tex
+++ b/sections/centres d'interet.tex
@@ -15,6 +15,6 @@
 \vspace{-6mm}
 {\fontsize{12}{10}\selectfont \hspace{3.8mm} Leisures}\newline
 \begin{itemize}
-    \item[\tiny\ding{110}] \textit{videogames' design analysis (12y), bassist in a groupe (5y), theater at the Paris' Conservatory (4y), cinema talkshows (8y)}
+    \item[\tiny\ding{110}] \textit{videogames' design (12y), bassist in a groupe (5y), theater at the Paris' Conservatory (4y), cinema talkshows (8y)}
 \end{itemize}
 \vspace{2mm}
