--- a/sections/informatiques.tex
+++ b/sections/informatiques.tex
@@ -9,20 +9,21 @@
 \vspace{-6mm}
 \begin{itemize}[noitemsep]
     \item[\tiny\ding{110}] \textit{Python, SQL, R, Matlab}
-    \item[\tiny\ding{110}] \textit{Java, C/C++}
+    \item[\tiny\ding{110}] \textit{Java, C/C++, CMake}
     \item[\tiny\ding{110}] \textit{Linux, bash, PowerShell}
     \item[\tiny\ding{110}] \textit{PyTorch, LibTorch, AdapterHub}
+    % \item[\tiny\ding{110}] \textit{sklearn}
     %\item[\tiny\ding{110}] \textit{Trankit, OpenNMT, SpaCy, CTranslate2, Stanza}
-    %\item[\tiny\ding{110}] \textit{OpenCV, sklearn}
-    \item[\tiny\ding{110}] \textit{OpenMP, xsmid, Cuda}
+    \item[\tiny\ding{110}] \textit{OpenCV (C++)}
+    \item[\tiny\ding{110}] \textit{Parallele Computing, Cuda}
     \item[\tiny\ding{110}] \textit{VHDL, FPGA, RaspberryPi, ZedBoard}
     \item[\tiny\ding{110}] \textit{Unity, C\#, Hololens}
     \item[\tiny\ding{110}] \textit{Network, Sysadmin, Cisco}
     %\item[\tiny\ding{110}] \textit{HTML, CSS, Javascript, Bootstrap, Wordpress}
-    \item[\tiny\ding{110}] \textit{gitlab, CI/CD, .deb, Docker}
+    \item[\tiny\ding{110}] \textit{gitlab, CI/CD, Docker}
     %\item[\tiny\ding{110}] \textit{JetBrains Rider / Pycharm}
     \item[\tiny\ding{110}] \textit{Graphic and CLI debugging}
-    \item[\tiny\ding{110}] \textit{Azure}
+    % \item[\tiny\ding{110}] \textit{Azure}
 \end{itemize}
 
 \vspace{2mm}
@@ -32,7 +33,7 @@
 \vspace{-6mm}
 \begin{itemize}[noitemsep]
     \item[\tiny\ding{110}] \textit{Office Pack, Google Tools and AppScript}
-    \item[\tiny\ding{110}] \LaTeX
+    \item[\tiny\ding{110}] \LaTeX \textit{, Doxygen}
     \item[\tiny\ding{110}] \textit{Zapier, AirTable}
 \end{itemize}
 
