--- a/sections/options.tex
+++ b/sections/options.tex
@@ -11,6 +11,8 @@
 \usepackage{pifont}
 \usepackage{tabularx}
 \usepackage{xcolor}
+\usepackage{ifthen}
+
 
 % _________________________________________________
 % Organisation de la mise en page
@@ -77,3 +79,14 @@ bottom = -5mm
 \newcommand{\infoCol}{11cm}
 \newcommand{\descrSpacing}{0cm}
 \newcommand{\descrWidth}{14cm}
+
+\ExplSyntaxOn
+\NewExpandableDocumentCommand{\ifstringsequalTF}{mmmm}
+ {
+  \str_if_eq:eeTF { #1 } { #2 } { #3 } { #4 }
+ }
+\NewExpandableDocumentCommand{\stringcase}{mO{}m}
+ {
+  \str_case_e:nnF { #1 } { #3 } { #2 }
+ }
+\ExplSyntaxOff
